# scrape-centris

./: .envrc  .gitignore  README.md  pyproject.toml  scrapy.cfg
.github/scripts/: indb.sh  run.sh
.github/workflows/: run-scraper.yml
scrape_centris/: items.py  middlewares.py  pipelines.py  settings.py
scrape_centris/spiders/: centris_plex.py
