[tool.poetry]
name = "scrape-centris"
version = "0.1.0"
description = ""
authors = ["David Francoeur"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "scrape_centris" }
]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
